<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View"/>

        <variable name="leftBtnText" type="String"/>

        <variable name="tinyBtnText" type="String" />

        <variable name="rightBtnText" type="String"/>

        <variable name="middleText" type="String"/>

        <variable name="successText" type="String" />

        <variable name="failText" type="String" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        tools:background="@drawable/ic_bg">

        <Button
                android:id="@+id/btnLeft"
                android:text="@{leftBtnText}"
                tools:text="@string/back"
                style="@style/footbar_button_style"
                android:layout_marginStart="16dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        <TextView
                android:id="@+id/middleTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:textColor="@color/white"
                android:textSize="@dimen/footbar_middle_text_size"
                android:textAlignment="center"
                android:ellipsize="marquee"
                android:singleLine="true"
                android:text="@{middleText}"
                android:visibility="gone"
                tools:visibility="visible"
                tools:text="MIDDLE TEXT"
                app:layout_constraintStart_toEndOf="@+id/btnLeft"
                app:layout_constraintEnd_toStartOf="@+id/btnRight"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
                android:id="@+id/successTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:textColor="@color/lime"
                android:textSize="@dimen/footbar_middle_text_size"
                android:textAlignment="center"
                android:ellipsize="marquee"
                android:singleLine="true"
                android:text="@{successText}"
                android:visibility="gone"
                tools:visibility="gone"
                tools:text="Tsung Hsuan, Lai"
                app:layout_constraintStart_toEndOf="@+id/btnLeft"
                app:layout_constraintEnd_toStartOf="@+id/btnRight"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
                android:id="@+id/failTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:textColor="@color/red"
                android:textSize="@dimen/footbar_middle_text_size"
                android:textAlignment="center"
                android:ellipsize="marquee"
                android:singleLine="true"
                android:text="@{failText}"
                android:visibility="gone"
                tools:visibility="gone"
                tools:text="@string/result_recognition_failed"
                app:layout_constraintStart_toEndOf="@+id/btnLeft"
                app:layout_constraintEnd_toStartOf="@+id/btnRight"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        <Button
                android:id="@+id/btnTiny"
                android:text="@{tinyBtnText}"
                tools:text="@string/cancel"
                style="@style/footbar_button_style"
                android:layout_marginEnd="16dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/btnRight"
                android:visibility="gone"
                tools:visibility="visible"/>

        <Button
                android:id="@+id/btnRight"
                android:text="@{rightBtnText}"
                tools:text="@string/verification"
                style="@style/footbar_button_style"
                android:layout_marginEnd="16dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
