<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
                name="viewModel"
                type="com.gorilla.attendance.ui.chooseMember.ChooseMemberViewModel"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/ic_bg">

        <TextView
                android:id="@+id/hintText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/choose_member_hint_text"
                android:textSize="@dimen/choose_text_size"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias="0.12"/>

        <ImageView
                android:id="@+id/imgEmployee"
                android:layout_width="@dimen/choose_icon_size"
                android:layout_height="@dimen/choose_icon_size"
                android:src="@mipmap/ic_employee"
                android:foreground="?android:attr/selectableItemBackground"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintVertical_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/imgVisitor"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/txtEmployee"

        />

        <TextView
                android:id="@+id/txtEmployee"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/employee"
                android:textColor="@android:color/white"
                android:textSize="@dimen/choose_text_size"
                app:layout_constraintTop_toBottomOf="@+id/imgEmployee"
                app:layout_constraintStart_toStartOf="@+id/imgEmployee"
                app:layout_constraintEnd_toEndOf="@+id/imgEmployee"
                app:layout_constraintBottom_toBottomOf="parent"


        />

        <ImageView
                android:id="@+id/imgVisitor"
                android:layout_width="@dimen/choose_icon_size"
                android:layout_height="@dimen/choose_icon_size"
                android:src="@mipmap/ic_visitor"
                app:layout_constraintVertical_chainStyle="packed"
                app:layout_constraintStart_toEndOf="@+id/imgEmployee"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/txtVisitor"

        />

        <TextView
                android:id="@+id/txtVisitor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/visitor"
                android:textColor="@android:color/white"
                android:textSize="@dimen/choose_text_size"
                app:layout_constraintTop_toBottomOf="@+id/imgVisitor"
                app:layout_constraintStart_toStartOf="@+id/imgVisitor"
                app:layout_constraintEnd_toEndOf="@+id/imgVisitor"
                app:layout_constraintBottom_toBottomOf="parent"

        />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
